# Minecraft-Block-Viewer

./: .gitignore  CMakeLists.txt  README.md  fetch_textures.sh
include/: minecraft_block_viewer.h
include/Block/: Block.h
include/glhelper/: Camera.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexBuffer.h
res/: block_info.json  block_specular_info.json
shaders/: block.shader
src/: minecraft_block_viewer.cpp
src/Block/: Block.cpp
src/glhelper/: Camera.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
